--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,246 @@
-#symptoms_con {
+#feelin{
+    display:flex;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    margin: 0;
+    background-image: linear-gradient();
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  height: 100vh;
+  width: 100vw;
+  background: linear-gradient(90deg, #439fd9, #63b94d);
+  position: absolute;
+  z-index:-1;
+}
+.wrapper h1 {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 888;
+  text-transform: uppercase;
+}
+.wrapper div {
+  height: 60px;
+  width: 60px;
+  border: 2px solid rgba(163, 217, 245, 0.5);
+  border-radius: 50px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  animation: 4s linear infinite;
+}
+div .dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50px;
+  background: rgba(163, 217, 245, 0.5);
+  position: absolute;
+  top: 20%;
+  right: 20%;
+}
+.wrapper div:nth-child(1) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(2) {
+  top: 60%;
+  left: 80%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(3) {
+  top: 40%;
+  left: 40%;
+  animation: animate 3s linear infinite;
+}
+.wrapper div:nth-child(4) {
+  top: 66%;
+  left: 30%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(5) {
+  top: 90%;
+  left: 10%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(6) {
+  top: 30%;
+  left: 60%;
+  animation: animate 5s linear infinite;
+}
+.wrapper div:nth-child(7) {
+  top: 70%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(8) {
+  top: 75%;
+  left: 60%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(9) {
+  top: 50%;
+  left: 50%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(10) {
+  top: 45%;
+  left: 20%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(11) {
+  top: 10%;
+  left: 90%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(12) {
+  top: 20%;
+  left: 70%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(13) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(14) {
+  top: 60%;
+  left: 5%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(15) {
+  top: 90%;
+  left: 80%;
+  animation: animate 9s linear infinite;
+}
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(70deg);
+  }
+  100% {
+    transform: scale(1.3) translateY(-100px) rotate(360deg);
+  }
+}
+
+#taste {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 6px 15px;
+    font-size: 18px;
+    border-radius: 300px;
+    border: 2px solid white;
+    background-color: transparent;
+    color: white;
+    font-family: 'Berkshire Swash', cursive;
+    outline: none;
+    width: 150px;
+    cursor: pointer;
+}
+
+#taste option {
+    background-color: rgba(88,167,176,255);
+    color: white;
+    border: none;
+    padding: 10px;
+}
+
+#taste select{
+    text-align: center;
+}
+
+.berkshire-swash-regular {
+  font-family: "Berkshire Swash", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  color: white;
+}
+
+input[type="text"]{
+    background-color: transparent;
+    border: 2px solid white;
+    font-family: "Berkshire Swash", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    border-radius: 300px;
+    padding: 2px;
+    text-align: center;
+    align-items: center;
+    color: white;
+}
+
+::placeholder{
+    color:white;
+}
+
+#result{
+    width: 500px;
+    text-wrap: pretty;
+}
+
+#reci {
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    justify-content: start;
+    background: linear-gradient(-90deg, #439fd9, #63b94d);
+    border: none;
+    border-radius: 30px;
+    padding: 12px 24px;
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+    overflow: hidden;
+    position: relative;
+    width: 200px;
+}
+
+#reci:hover {
+    background: linear-gradient(-90deg, #439fd9, #63b94d);
+}
+
+.text {
+    z-index: 2;
+}
+
+.arrow {
+    border-radius: 50%;
     display: flex;
-    gap: 5px;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 10px;
+    transition: left 0.3s ease;
+}
+
+#reci:hover .arrow {
+    left: calc(100% - 40px);
+}
+
+.arrow::before {
+    content: '🍹';
+    font-size: 20px;
 }
