--- a/templates/index.html
+++ b/templates/index.html
@@ -3,32 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <title>SipSync</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <form>
-      Choose Your Taste:
-      <select id="vehicle">
-            <option value="Sweet">🍬 Sweet</option>
-            <option value="Earthy">🌿 Earthy</option>
-            <option value="Citrusy">🍋 Citrusy</option>
-            <option value="Spicy">🫚 Spicy</option>
-            <option value="Floral">🌸 Floral</option>
-      </select>
-    </form>
-    <form>
-        What's Your Mood:
-        <input type="text" placeholder="Any Feelings ...">
-    </form>
-    <form autocomplete="off" action="/action_page.php" id="symptoms_con">
-        Watcha Feelin:
-        <div class="autocomplete">
-          <input id="myInput" type="text" name="Symptoms" placeholder="Any Feelings ...">
+    <div class="wrapper">
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+      <div><span class="dot"></span></div>
+    </div>
+    <form id="recipe-form">
+        <div class="berkshire-swash-regular">
+            <label for="taste">Choose Your Taste:</label>
+            <select id="taste" required>
+                <option value="">Select...</option>
+                <option value="Sweet">🍬 Sweet</option>
+                <option value="Earthy">🌿 Earthy</option>
+                <option value="Citrusy">🍋 Citrusy</option>
+                <option value="Spicy">🫚 Spicy</option>
+                <option value="Floral">🌸 Floral</option>
+            </select>
         </div>
-        <input type="submit">
+
+        <div class="berkshire-swash-regular">
+            <label for="mood">What's Your Mood:</label>
+            <input id="mood" type="text" required>
+        </div>
+
+        <div id="feelin" class="berkshire-swash-regular">
+            <label for="sym">Watcha Feelin:</label>
+            <div class="autocomplete">
+                <input id="sym" type="text" name="Symptoms" placeholder="Any Feelings ..." required>
+            </div>
+        </div>
+
+        <button id="reci" class="berkshire-swash-regular">
+                <span class="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;S Y N C&nbsp;&nbsp;&nbsp;M Y&nbsp;&nbsp;&nbsp;S I P</span>
+                <div class="arrow"></div>
+        </button>
     </form>
+
+    <div id="result"></div>
 
     <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
