almosted finished UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,14 @@
         </button>
     </form>
 
-    <div id="result"></div>
+    <div id="result2">
+        <div id="loading">
+                <div class="loader"></div>
+                <p class="berkshire-swash-regular">Brewing Your Perfect Sip ...</p>
+        </div>
+        <div id="result">
+        </div>
+    </div>
 
     <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
