--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,8 @@
         <div id="result">
         </div>
     </div>
+    <div id="youtube" class="berkshire-swash-regular">
+    </div>
 
     <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
